--- a/src/app/auth/pages/register/register.component.html
+++ b/src/app/auth/pages/register/register.component.html
@@ -95,6 +95,11 @@
   </form>
 </div>
 
-<ion-button routerLink="/auth/login" expand="block" fill="clear" shape="round">
+<ion-button
+  routerLink="/auth/login"
+  expand="block"
+  fill="outline"
+  shape="round"
+>
   Login
 </ion-button>
