--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -3,14 +3,24 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="home"></ion-back-button>
     </ion-buttons>
-    <ion-title>Tu carrito</ion-title>
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon slot="start" name="add"></ion-icon>
+    <ion-title>Carrito</ion-title>
+    <ion-buttons slot="end" color="primary">
+      <div class="cost_conatainer">
+        <p>Costo Total:</p>
+        <ion-badge slot="start" color="primary"
+          >{{cost | localMoney}}</ion-badge
+        >
+      </div>
+      <ion-button color="tertiary" fill="solid" shape="round">
         Ordenar
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content> </ion-content>
+<ion-content>
+  <app-product-cart
+    [product]="product"
+    *ngFor="let product of products"
+  ></app-product-cart>
+</ion-content>
