--- a/src/app/cart/components/product-cart/product-cart.component.html
+++ b/src/app/cart/components/product-cart/product-cart.component.html
@@ -18,30 +18,25 @@
       </ion-slide>
     </ion-slides>
     {{ product.description }}
-    <ion-row>
-      <ion-col size="6">
-        <ion-button
-          (click)="addToCart()"
-          expand="block"
-          fill="outline"
-          shape="round"
-        >
-          <ion-icon slot="start" name="add"></ion-icon>
-          Carrito
-        </ion-button>
-      </ion-col>
-      <ion-col size="6">
-        <ion-button
-          (click)="removeToCart()"
-          expand="block"
-          fill="outline"
-          shape="round"
-          color="danger"
-        >
-          <ion-icon name="remove"></ion-icon>
-          Quitar
-        </ion-button>
-      </ion-col>
-    </ion-row>
   </ion-card-content>
+
+  <div class="counter_container">
+    <ion-button color="danger" (click)="decrease()">
+      <ion-icon slot="icon-only" name="remove"></ion-icon>
+    </ion-button>
+    <div class="counter">
+      <p>Cantidad</p>
+      <p>{{ product.cant }}</p>
+    </div>
+    <ion-button (click)="increase()">
+      <ion-icon slot="icon-only" name="add"></ion-icon>
+    </ion-button>
+  </div>
+
+  <div class="element_container">
+    <ion-button color="danger" (click)="removeFromCart()">
+      <ion-icon slot="start" name="trash"></ion-icon>
+      <ion-label>Quitar del carrito</ion-label>
+    </ion-button>
+  </div>
 </ion-card>
