--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -11,7 +11,12 @@
           >{{cost | localMoney}}</ion-badge
         >
       </div>
-      <ion-button color="tertiary" fill="solid" shape="round">
+      <ion-button
+        routerLink="/send-order"
+        color="tertiary"
+        fill="solid"
+        shape="round"
+      >
         Ordenar
       </ion-button>
     </ion-buttons>
