move all files that have relation with orders to orders module

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -12,7 +12,7 @@
         >
       </div>
       <ion-button
-        routerLink="/send-order"
+        routerLink="/orders/send"
         color="tertiary"
         fill="solid"
         shape="round"
