--- a/src/app/orders/components/detail/detail.component.html
+++ b/src/app/orders/components/detail/detail.component.html
@@ -2,12 +2,12 @@
   <div class="detail">
     <div class="detail_img">
       <ion-avatar>
-        <img [src]="product.images[0].url" />
+        <img [src]="product?.images[0].url" />
       </ion-avatar>
     </div>
     <div class="detail_text">
       <ion-label>
-        <h2>{{ product.cant }} {{ product.name }}</h2>
+        <h2>{{ product.cant || cant }} {{ product.name }}</h2>
         <h3>{{ product | priceForUnit }}</h3>
       </ion-label>
     </div>
@@ -15,7 +15,7 @@
 
   <div>
     <h3 class="subtotal">
-      {{ product.cant * product.price | currency: "Bs. " }}
+      {{ product.cant || cant * product.price | currency: "Bs. " }}
     </h3>
   </div>
 </div>
