--- a/src/app/orders/pages/order-list/order-list.component.html
+++ b/src/app/orders/pages/order-list/order-list.component.html
@@ -9,7 +9,8 @@
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let order of orders">
+    <!-- <ion-item *ngFor="let order of orders" routerLink="/orders/{{ order.id }}"> -->
+    <ion-item *ngFor="let order of orders" (click)="goToOrder(order.id)">
       <ion-icon slot="start" name="cart-outline"></ion-icon>
       <ion-label>
         <h2>{{ order.address }}</h2>
