--- a/src/app/orders/components/detail/detail.component.html
+++ b/src/app/orders/components/detail/detail.component.html
@@ -15,7 +15,7 @@
 
   <div>
     <h3 class="subtotal">
-      {{ product.cant || cant * product.price | currency: "Bs. " }}
+      {{ (product.cant || cant) * product.price | currency: "Bs. " }}
     </h3>
   </div>
 </div>
