--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -4,6 +4,6 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-router-outlet></ion-router-outlet>
-</ion-content>
+<ion-router-outlet></ion-router-outlet>
+<!-- <ion-content>
+</ion-content> -->
