--- a/src/app/products/pages/product/product.component.html
+++ b/src/app/products/pages/product/product.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/products"></ion-back-button>
+    </ion-buttons>
     <ion-title>Producto numero 01</ion-title>
   </ion-toolbar>
 </ion-header>
