--- a/src/app/products/pages/product-new/product-new.component.html
+++ b/src/app/products/pages/product-new/product-new.component.html
@@ -9,6 +9,7 @@
 
 <ion-content>
   <div *ngIf="units.length > 0">
+    <app-product-new-images></app-product-new-images>
     <app-product-form [units]="units"></app-product-form>
   </div>
 </ion-content>
