--- a/src/app/products/components/product-images/product-images.component.html
+++ b/src/app/products/components/product-images/product-images.component.html
@@ -2,12 +2,14 @@
   <div *ngFor="let image of images" class="image_container">
     <ion-img [src]="image.url" class="product_image"></ion-img>
     <div>
-      <ion-chip color="tertiary" shape="round">
-        <ion-label>Actualizar</ion-label>
-      </ion-chip>
-      <ion-chip color="danger" fill="solid">
-        <ion-label>Eliminar</ion-label>
-      </ion-chip>
+      <ion-button
+        color="danger"
+        fill="solid"
+        shape="round"
+        (click)="removeImage(image.id)"
+      >
+        <ion-icon slot="start" name="remove"></ion-icon>Eliminar
+      </ion-button>
     </div>
   </div>
 </div>
