buttons for login and logout

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Ingresa o Registrate</ion-title>
+    <ion-buttons slot="end">
+      <ion-button
+        routerLink="/home"
+        fill="solid"
+        shape="round"
+        color="tertiary"
+      >
+        Ver productos
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Autenticate</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-router-outlet></ion-router-outlet>
-<!-- <ion-content>
-</ion-content> -->
