--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -35,10 +35,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <div id="container">
     <app-product-home
       [product]="product"
       *ngFor="let product of products"
+      class="animate__animated animate__bounce"
     ></app-product-home>
   </div>
 
