routes for tabs

--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button
-        routerLink="/home"
+        routerLink="/tabs"
         fill="solid"
         shape="round"
         color="tertiary"
