--- a/src/app/orders/pages/order-send/order-send.component.html
+++ b/src/app/orders/pages/order-send/order-send.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/cart"></ion-back-button>
+      <ion-back-button defaultHref="tabs/cart"></ion-back-button>
     </ion-buttons>
     <ion-title>Para donde?</ion-title>
     <ion-buttons slot="end">
