--- a/src/app/orders/pages/order/order.component.html
+++ b/src/app/orders/pages/order/order.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/orders/list"></ion-back-button>
+      <ion-back-button defaultHref="/tabs/orders/list"></ion-back-button>
     </ion-buttons>
     <ion-title *ngIf="order">Orden numero {{ order.id }}</ion-title>
 
