--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -11,12 +11,12 @@
       <ion-badge *ngIf="cantInCart > 0">{{cantInCart}}</ion-badge>
     </ion-tab-button>
 
-    <ion-tab-button tab="orders">
+    <ion-tab-button tab="orders" *ngIf="isAuthenticate">
       <ion-icon name="list"></ion-icon>
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="products">
+    <ion-tab-button tab="products" *ngIf="isAdmin">
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Admin</ion-label>
     </ion-tab-button>
