--- a/src/app/products/pages/product/product.component.html
+++ b/src/app/products/pages/product/product.component.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/products"></ion-back-button>
+      <ion-back-button
+        defaultHref="/tabs/settings/products/list"
+      ></ion-back-button>
     </ion-buttons>
     <ion-title>Producto numero 01</ion-title>
   </ion-toolbar>
