--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -16,7 +16,7 @@
       <ion-label>Pedidos</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="products" *ngIf="isAdmin">
+    <ion-tab-button tab="settings" *ngIf="isAdmin">
       <ion-icon name="settings-outline"></ion-icon>
       <ion-label>Admin</ion-label>
     </ion-tab-button>
