--- a/src/app/products/pages/product-new/product-new.component.html
+++ b/src/app/products/pages/product-new/product-new.component.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/products/list"></ion-back-button>
+      <ion-back-button
+        defaultHref="/tabs/settings/products/list"
+      ></ion-back-button>
     </ion-buttons>
     <ion-title>Nuevo producto</ion-title>
   </ion-toolbar>
