fixed guards. remove fab in page home

--- a/src/app/cart/cart.page.html
+++ b/src/app/cart/cart.page.html
@@ -9,7 +9,7 @@
         >
       </div>
       <ion-button
-        routerLink="/orders/send"
+        routerLink="/tabs/orders/send"
         color="tertiary"
         fill="solid"
         shape="round"
