--- a/src/app/settings/pages/products/pages/product-list/product-list.component.html
+++ b/src/app/settings/pages/products/pages/product-list/product-list.component.html
@@ -8,6 +8,10 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+
   <ion-list>
     <ion-item
       routerLink="/tabs/settings/products/product/{{ product.id }}"
