--- a/src/app/cart/cart.page.scss
+++ b/src/app/cart/cart.page.scss
@@ -1,10 +1,21 @@
 .cost_conatainer {
   display: flex;
-  flex-direction: column;
+  margin: 0.5rem 1rem;
+  padding: 0.5rem;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 1rem;
+  box-shadow: 1px 4px 8px 0px rgba(0, 0, 0, 0.3);
   p {
     margin: 0;
-    font-size: 0.8rem;
+    font-size: 1.3rem;
     letter-spacing: 1px;
     color: gray;
+  }
+
+  ion-badge {
+    font-size: 1.1rem;
+    letter-spacing: 1px;
+    padding: 0.5rem;
   }
 }
