ui for send notification to user

--- a/src/app/orders/pages/order/order.component.html
+++ b/src/app/orders/pages/order/order.component.html
@@ -43,3 +43,14 @@
     ></app-messages>
   </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-button (click)="sendNotification()">
+        <ion-icon slot="start" name="notifications-circle-outline"></ion-icon>
+        Enviar notificacion
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
