--- a/src/app/orders/components/modal-notification/modal-notification.component.html
+++ b/src/app/orders/components/modal-notification/modal-notification.component.html
@@ -60,9 +60,14 @@
           placeholder="Cuerpo notificacion"
         ></ion-input>
       </ion-item>
-      <ion-button type="submit" expand="block" shape="round">
+      <ion-button type="submit" expand="block" shape="round" *ngIf="!isLoading">
         <ion-icon slot="start" name="send-outline"></ion-icon>
         Enviar notificacion
+      </ion-button>
+
+      <ion-button expand="block" shape="round" disabled *ngIf="isLoading">
+        <ion-icon slot="start" name="send-outline"></ion-icon>
+        Enviando ...
       </ion-button>
     </ion-list>
   </form>
