--- a/src/app/orders/pages/order/order.component.html
+++ b/src/app/orders/pages/order/order.component.html
@@ -44,7 +44,7 @@
   </div>
 </ion-content>
 
-<ion-footer>
+<ion-footer *ngIf="isAdmin">
   <ion-toolbar>
     <ion-buttons slot="end">
       <ion-button (click)="sendNotification()">
